education moved, images to .png

--- a/index.html
+++ b/index.html
@@ -89,6 +89,24 @@
 							<li>Marketing / Branding / Designing</li>
 							<li>Google Analytics</li>
 						</ul>
+						<div class="education">
+							<h3><i class="fa fa-graduation-cap"></i>Education</h3>
+							<h4>Galvanize | Full-Stack Development Immersive</h4>
+							<p class="title">February 2016 - July 2016</p>
+							<ul>
+								<li>Full-stack Development Fellow</li>
+							</ul>
+							<h4>TCC | Computer Science</h4>
+							<p class="title">Jan 2015 - December 2015</p>
+							<ul>
+								<li>Programming Certification in JavaScript basics, Microfost Office Suite and SQL / MySQL</li>
+							</ul>
+							<h4>Old Dominion University | Philosophy</h4>
+							<p class="title">August 2008 - December 2014</p>
+							<ul>
+								<li>Pi Beta Phi Fraternity</li>
+							</ul>
+						</div>
 					</div>
 					<div class="col-md-6 resume">
 						<div class="experience">
@@ -120,8 +138,6 @@
 								<li>Managed team to process and merchandise 8+ trucks of product daily for most profitable TJMaxx / HomeGoods in the country</li>
 								<li>Decreased turnover rates by providing team members with an empathetic workplace</li>
 							</ul>
-
-
 							<h4>Product/Project Coordinator</h4>
 							<p class="title">Whole Foods Market | November 2012 - December 2015
 							<ul>
@@ -129,7 +145,6 @@
 								<li>Analyzed metrics, pinpointing areas with opportunity for growth</li>
 								<li>Guided Team Leads to develop proactive strategies, and execute new department practices to build add-on sales, increase basket-size and improve merchandising standards</li>
 							</ul>
-
 							<h4>Wine Buyer</h4>
 							<p class="title">Whole Foods Market | November 2012 - December 2015
 							<ul>
@@ -141,29 +156,65 @@
 								<li>Built relationships with new suppliers and brands to expand sub-departments and successfully increased consumer engagement</li>
 							</ul>
 						</div>
-						<div class="education">
-							<h3><i class="fa fa-graduation-cap"></i>Education</h3>
-							<h4>Galvanize | Full-Stack Development Immersive</h4>
-							<p class="title">February 2016 - July 2016</p>
-							<ul>
-								<li>Full-stack Development Fellow</li>
-							</ul>
-							<h4>TCC | Computer Science</h4>
-							<p class="title">Jan 2015 - December 2015</p>
-							<ul>
-								<li>Programming Certification in JavaScript basics, Microfost Office Suite, and SQL / MySQL</li>
-							</ul>
-							<h4>Old Dominion University | Philosophy</h4>
-							<p class="title">August 2008 - December 2014</p>
-							<ul>
-								<li>Pi Beta Phi Fraternity</li>
-							</ul>
-						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 
+		<!-- portfolio -->
+		<div class="light-section">
+			<div class="container text-center">
+				<a name="portfolio"></a>
+				<h2>PORTFOLIO</h2>
+				<div class="row">
+					<div class="col-lg-3 col-md-6 col-sm-6">
+						<a class="piece piece-odd" href="portfolio-1.html">
+			  			<div class="piece-hover">
+			  				<div class="piece-name">
+			  					<p class="piece-title">The Boocamp Resource Network</p>
+			  					<p class="piece-type">Design & Development</p>
+			  				</div>
+			  			</div>
+			  			<img src="images/1.png" alt="">
+			  		</a>
+					</div>
+
+					<div class="col-lg-3 col-md-6 col-sm-6">
+						<a class="piece piece-even" href="portfolio-2.html">
+			  			<div class="piece-hover">
+			  				<div class="piece-name">
+			  					<p class="piece-title">Troviamo</p>
+			  					<p class="piece-type">Design & Development</p>
+			  				</div>
+			  			</div>
+						<img src="images/2.png" alt="">
+						</a>
+					</div>
+
+					<div class="col-lg-3 col-md-6 col-sm-6">
+						<a class="piece piece-odd" href="portfolio-3.html">
+			  			<div class="piece-hover">
+			  				<div class="piece-name">
+			  					<p class="piece-title">Confident Bagel</p>
+			  					<p class="piece-type">Design & Development</p>
+			  				</div>
+			  			</div>
+			  			<img src="images/3.png" alt="">
+			  		</a>
+					</div>
+
+					<div class="col-lg-3 col-md-6 col-sm-6">
+						<a class="piece piece-odd" href="portfolio-4.html">
+			  			<div class="piece-hover">
+			  				<div class="piece-name">
+			  					<p class="piece-title">RideSurf</p>
+			  					<p class="piece-type">Design & Marketing</p>
+			  				</div>
+			  			</div>
+			  			<img src="images/4.png" alt="">
+			  		</a>
+					</div>
+				</div>
 
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2">
@@ -175,7 +226,6 @@
 				</div>
 			</div>
 		</div>
-
 
 		<!-- contact -->
 		<div class="dark-section">
