--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -30,7 +30,7 @@
         <div class="row">
           <div class="col-md-6">
             <h2>Description</h2>
-            <p>RideSurf is a mobile app connecting people with active lifestyles to a secure car-sharing service on the basis of mutual activities.</p>
+            <p>RideSurf is a mobile / web app connecting people with active lifestyles to a secure car-sharing service on the basis of mutual activities.</p>
           </div>
           <div class="col-md-6">
             <h2>Technologies</h2>
