--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 		<!-- hero -->
 		<div class="header">
-			<h1 class="headline">PRODUCT | DEVELOPMENT | DESIGN</h1>
+			<h1 class="headline">PRODUCT | DESIGN | DEVELOP</h1>
 			<div class="about-section">
 				<div class="col-md-6 col-md-offset-3">
 					<a name="about"></a>
