minor text changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<div class="col-md-6 col-md-offset-3">
 					<a name="about"></a>
 					<h2>ABOUT</h2>
-					<p>I am a full-stack web developer with over 10 years of experience in product knowledge, product education, retail and ecommerce, and consumer-based industries. I enjoy networking, B2C industries, creating seamless user experiences through clean code and simple interfaces, and challenging myself with meaningful projects.  I am a visual and analytical thinker, communicative problem solver, and team player with confidence to take the lead.  I love mapping out ideas and features on the whiteboard, and I am obsessed with how consumers interact with product.  I take pride in what I do, and I consistently produce results.</p>
+					<p>I am a full-stack web developer with over 10 years of experience in product knowledge, product education, retail and ecommerce, and consumer-based industries. I enjoy networking, B2C industries, analyzing consumer behahior, creating seamless user experiences through clean code and simple interfaces, and challenging myself with meaningful projects.  I am a visual and analytical thinker, communicative problem solver, and team player with confidence to take the lead.  I love mapping out ideas and features on the whiteboard, and I am obsessed with how consumers interact with product.  I take pride in what I do, and I consistently produce results.</p>
 				</div>
 			</div>
 		</div>
@@ -142,8 +142,8 @@
 							<p class="title">Whole Foods Market | November 2012 - December 2015
 							<ul>
 								<li>Worked with Regional and Global teams to implement 4 full-department resets, improving customer-experience and increasing department sales</li>
-								<li>Analyzed metrics, pinpointing areas with opportunity for growth</li>
-								<li>Guided Team Leads to develop proactive strategies, and execute new department practices to build add-on sales, increase basket-size and improve merchandising standards</li>
+								<li>Analyzed metrics and consumer behavior, identifying areas with opportunity for growth</li>
+								<li>Guided teams to develop proactive strategies/procedures and execute new department practices to build add-on sales, increase basket-size, improve merchandising standards and minimize waste</li>
 							</ul>
 							<h4>Wine Buyer</h4>
 							<p class="title">Whole Foods Market | November 2012 - December 2015
