pics and authorship added

--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -41,7 +41,7 @@
         </div>
         <div class="row">
 					<div class="col-md-12">
-            <img src="image goes here" alt="" class="img-top">
+            <img src="images/twittersphere.png" alt="" class="img-top">
 			  	</div>
 			  </div>
         <div class="row footer">
