final pictures added

--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -40,7 +40,7 @@
         </div>
         <div class="row">
 					<div class="col-md-12">
-            <img src="images/scavenger_hunt_app.png" alt="" class="img-top">
+            <img src="images/scavenger_hunt.png" alt="" class="img-top">
 			  	</div>
 			  </div>
         <div class="row footer">
