--- a/index.html
+++ b/index.html
@@ -169,17 +169,41 @@
 				<h2>PORTFOLIO</h2>
 				<div class="row">
 					<div class="col-lg-3 col-md-6 col-sm-6">
-						<a class="piece piece-odd" href="portfolio-1.html">
-			  			<div class="piece-hover">
-			  				<div class="piece-name">
-			  					<p class="piece-title">The Boocamp Resource Network</p>
-			  					<p class="piece-type">Design & Development</p>
-			  				</div>
-			  			</div>
-			  			<img src="images/1.png" alt="">
-			  		</a>
+						<a class="piece piece-odd" href="portfolio-4.html">
+							<div class="piece-hover">
+								<div class="piece-name">
+									<p class="piece-title">RideSurf</p>
+									<p class="piece-type">Design & Marketing</p>
+								</div>
+							</div>
+							<img src="images/4.png" alt="">
+						</a>
 					</div>
 
+					<div class="col-lg-3 col-md-6 col-sm-6">
+						<a class="piece piece-odd" href="portfolio-1.html">
+							<div class="piece-hover">
+								<div class="piece-name">
+									<p class="piece-title">The Bootcamp Resource Network</p>
+									<p class="piece-type">Design & Development</p>
+								</div>
+							</div>
+							<img src="images/1.png" alt="">
+						</a>
+					</div>
+
+					<div class="col-lg-3 col-md-6 col-sm-6">
+						<a class="piece piece-odd" href="portfolio-3.html">
+							<div class="piece-hover">
+								<div class="piece-name">
+									<p class="piece-title">Confident Bagel</p>
+									<p class="piece-type">Design & Development</p>
+								</div>
+							</div>
+							<img src="images/3.png" alt="">
+						</a>
+					</div>
+					
 					<div class="col-lg-3 col-md-6 col-sm-6">
 						<a class="piece piece-even" href="portfolio-2.html">
 			  			<div class="piece-hover">
@@ -192,29 +216,7 @@
 						</a>
 					</div>
 
-					<div class="col-lg-3 col-md-6 col-sm-6">
-						<a class="piece piece-odd" href="portfolio-3.html">
-			  			<div class="piece-hover">
-			  				<div class="piece-name">
-			  					<p class="piece-title">Confident Bagel</p>
-			  					<p class="piece-type">Design & Development</p>
-			  				</div>
-			  			</div>
-			  			<img src="images/3.png" alt="">
-			  		</a>
-					</div>
 
-					<div class="col-lg-3 col-md-6 col-sm-6">
-						<a class="piece piece-odd" href="portfolio-4.html">
-			  			<div class="piece-hover">
-			  				<div class="piece-name">
-			  					<p class="piece-title">RideSurf</p>
-			  					<p class="piece-type">Design & Marketing</p>
-			  				</div>
-			  			</div>
-			  			<img src="images/4.png" alt="">
-			  		</a>
-					</div>
 				</div>
 
 				<div class="row">
