--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 							<img src="images/3.png" alt="">
 						</a>
 					</div>
-					
+
 					<div class="col-lg-3 col-md-6 col-sm-6">
 						<a class="piece piece-even" href="portfolio-2.html">
 			  			<div class="piece-hover">
@@ -219,14 +219,14 @@
 
 				</div>
 
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-md-8 col-md-offset-2">
 						<blockquote class="quote-one">
 						  <p class="lead"><span class="quotation">&ldquo;</span>I worked alongside Morgen at Galvanize, and from the beginning I was impressed with her tenacity and commitment to delivering user-driven products. She is not afraid to seek out diverse opinions and consistently challenges herself and others to raise the bar in delivering meaningful user experiences.<span class="quotation">&rdquo;</span></p>
 						  <footer>Amy Conchie, <cite title="Source Title">Software Engineer</cite></footer>
 						</blockquote>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 
