--- a/index.html
+++ b/index.html
@@ -24,14 +24,21 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">MORGEN FETT</a>
+					<!--TODO: make MORGEN FETT center-aligned on navbar-->
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">ABOUT</a></li>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#about">ABOUT</a></li>
 						<li><a href="#resume">RESUME</a></li>
-            <li><a href="#portfolio">PORTFOLIO</a></li>
-            <li><a href="#contact">CONTACT</a></li>
-          </ul>
+						<li><a href="#portfolio">PORTFOLIO</a></li>
+						<li><a href="#contact">CONTACT</a></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-left">
+						<!--TODO: when navbar collapses, maket these show up as 'LinkedIn' 'GitHub' 'Instagram'-->
+						<li><a href="https://www.linkedin.com/in/morgen-fett"><i class="fa fa-icon fa-linkedin-square fa-lg"></i></a></li>
+						<li><a href="https://github.com/morgen-montgomery"><i class="fa fa-icon fa-github-square fa-lg"></i></a></li>
+						<li><a href="https://www.instagram.com/mfett004"><i class="fa fa-icon fa-instagram fa-lg"></i></a></li>
+					</ul>
         </div>
       </div>
     </nav>
