made those pesky icons into buttons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 	</head>
 	<body>
 		<!-- nav -->
@@ -34,10 +35,11 @@
 						<li><a href="#contact">CONTACT</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-left">
+						<!-- button type="button" class="btn btn-default" -->
 						<!--TODO: when navbar collapses, maket these show up as 'LinkedIn' 'GitHub' 'Instagram'-->
-						<li><a href="https://www.linkedin.com/in/morgen-fett"><i class="fa fa-icon fa-linkedin-square fa-lg"></i></a></li>
-						<li><a href="https://github.com/morgen-montgomery"><i class="fa fa-icon fa-github-square fa-lg"></i></a></li>
-						<li><a href="https://www.instagram.com/mfett004"><i class="fa fa-icon fa-instagram fa-lg"></i></a></li>
+						<li><button class="btn btn-lg" type="button" name="button"><a href="https://www.linkedin.com/in/morgen-fett"> <i class="fa fa-linkedin-square fa-lg"></i> </a></button></li>
+						<li><button class="btn btn-lg" type="button" name="button"><a href="https://github.com/morgen-montgomery"> <i class="fa fa-icon fa-github-square fa-lg"></i> </a></button></li>
+						<li><button class="btn btn-lg" type="button" name="button"><a href="https://www.instagram.com/mfett004"> <i class="fa fa-icon fa-instagram fa-lg"></i> </a></button></li>
 					</ul>
         </div>
       </div>
