weird white on white hover gone

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 						<!-- button type="button" class="btn btn-default" -->
 						<!--TODO: when navbar collapses, maket these show up as 'LinkedIn' 'GitHub' 'Instagram'-->
 						<li><button class="btn btn-lg" type="button" name="button"><a href="https://www.linkedin.com/in/morgen-fett"> <i class="fa fa-linkedin-square fa-lg"></i> </a></button></li>
-						<li><button class="btn btn-lg" type="button" name="button"><a href="https://github.com/morgen-montgomery"> <i class="fa fa-icon fa-github-square fa-lg"></i> </a></button></li>
-						<li><button class="btn btn-lg" type="button" name="button"><a href="https://www.instagram.com/mfett004"> <i class="fa fa-icon fa-instagram fa-lg"></i> </a></button></li>
+						<li><button class="btn btn-lg" type="button" name="button"><a href="https://github.com/morgen-montgomery"> <i class="fa fa-github-square fa-lg"></i> </a></button></li>
+						<li><button class="btn btn-lg" type="button" name="button"><a href="https://www.instagram.com/mfett004"> <i class="fa fa-instagram fa-lg"></i> </a></button></li>
 					</ul>
         </div>
       </div>
