--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 						<li><a href="#contact">CONTACT</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-left">
-						<!-- button type="button" class="btn btn-default" -->
 						<!--TODO: when navbar collapses, maket these show up as 'LinkedIn' 'GitHub' 'Instagram'-->
+						<!--TODO: remove or alter hover state-->
 						<li><button class="btn btn-lg" type="button" name="button"><a href="https://www.linkedin.com/in/morgen-fett"> <i class="fa fa-linkedin-square fa-lg"></i> </a></button></li>
 						<li><button class="btn btn-lg" type="button" name="button"><a href="https://github.com/morgen-montgomery"> <i class="fa fa-github-square fa-lg"></i> </a></button></li>
 						<li><button class="btn btn-lg" type="button" name="button"><a href="https://www.instagram.com/mfett004"> <i class="fa fa-instagram fa-lg"></i> </a></button></li>
