Resume download added, some styling altered

--- a/index.html
+++ b/index.html
@@ -65,12 +65,19 @@
 					<div class="col-md-12 text-center">
 						<a name="resume"></a>
 						<h2>RESUME</h2>
+						<div class="resume_download">
+							<button type="button" name="button">
+								<a href="Morgen_Fett_Resume.docx" download="Morgen_Fett_Resume.docx">
+									<i class="fa fa-download fa-lg" aria-hidden="true"></i> Download my Resume
+								</a>
+							</button>
+						</div>
 					</div>
 				</div>
 				<div class="row resume">
 					<div class="col-md-1"></div>
 					<div class="col-md-5 skills">
-						<h3><i class="fa fa-wrench"></i>Skills</h3>
+						<h3><i class="fa fa-cogs"></i>Skills</h3>
 						<ul>
 							<li>JavaScript (jQuery, AngularJS, React)</li>
 							<li>Python</li>
@@ -118,9 +125,10 @@
 							</ul>
 						</div>
 					</div>
+
 					<div class="col-md-6 resume">
 						<div class="experience">
-							<h3><i class="fa fa-briefcase"></i>Experience</h3>
+							<h3><i class="fa fa-suitcase"></i>Experience</h3>
 							<h4>Software Developer / Product Owner</h4>
 							<p class="title">ReUP Distribution | September 2016 - January 2017
 							<ul>
