--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 						<li><button class="btn btn-lg" type="button" name="button"><a href="https://www.linkedin.com/in/morgen-fett"> <i class="fa fa-linkedin-square fa-lg"></i> </a></button></li>
 						<li><button class="btn btn-lg" type="button" name="button"><a href="https://github.com/morgen-montgomery"> <i class="fa fa-github-square fa-lg"></i> </a></button></li>
 						<li><button class="btn btn-lg" type="button" name="button"><a href="https://www.instagram.com/mfett004"> <i class="fa fa-instagram fa-lg"></i> </a></button></li>
+						<li><button class="btn btn-lg" type="button" name="button"><a href="https://twitter.com/M_M0NTG0MERY"> <i class="fa fa-twitter-square fa-lg"></i> </a></button></li>
 					</ul>
         </div>
       </div>
