header and about section done, footer done, contact in progress

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div class="header">
 			<h1 class="headline">PRODUCT | DEVELOPMENT | DESIGN</h1>
 			<div class="about-section">
-				<div class="col-md-6 col-md-offset-3">
+				<div class="col-md-10 col-md-offset-1">
 					<a name="about"></a>
 					<h2>ABOUT</h2>
 					<p>I am a full-stack web developer with over 10 years of experience in product knowledge, product education, retail and ecommerce, and consumer-based industries. I enjoy networking, B2C industries, analyzing consumer behahior, creating seamless user experiences through clean code and simple interfaces, and challenging myself with meaningful projects.  I am a visual and analytical thinker, communicative problem solver, and team player with confidence to take the lead.  I love mapping out ideas and features on the whiteboard, and I am obsessed with how consumers interact with product.  I take pride in what I do, and I consistently produce results.</p>
@@ -249,13 +249,11 @@
 		</div>
 
 		<!-- contact -->
-		<div class="dark-section">
-			<div class="container">
+		<div class="contact-section">
+			<div class="container text-center">
 				<div class="row">
-					<div class="col-md-12 text-center">
 						<a name="contact"></a>
 						<h2>CONTACT</h2>
-					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3">
@@ -285,6 +283,12 @@
 				</div>
 			</div>
 		</div>
-		<div class="dark-section-straight"></div>
+
+		<!-- footer -->
+		<div class="page-footer">
+			<div class="col-md-6 col-md-offset-3">
+				<p>Willing to work in:</br>Seattle | Bellevue | Redmond | San Fransicso | Long Beach | Remote</p>
+			</div>
+		</div>
 	</body>
 </html>
