--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 						<h2>CONTACT</h2>
 				</div>
 				<div class="row">
-					<div class="col-md-6 col-md-offset-3">
+					<div class="col-sm-6 col-sm-offset-3">
 						<form id="contactform" method="POST">
 							<div class="form-group">
 								<input type="text" name="name" placeholder="Your name" class="form-control">
@@ -284,10 +284,10 @@
 			</div>
 		</div>
 
-		<!-- footer -->
+	<!-- footer -->
 		<div class="page-footer">
-			<div class="col-md-6 col-md-offset-3">
-				<p>Willing to work in:</br>Seattle | Bellevue | Redmond | San Fransicso | Long Beach | Remote</p>
+			<div class="gl-container container text-center">
+						<p>Willing to work in:</br>Seattle | Bellevue | Redmond | San Fransicso | Long Beach | Remote</p>
 			</div>
 		</div>
 	</body>
