resume section tinkered with

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 		<!-- resume -->
 		<div class="dark-section">
-			<div class="container">
+			<!-- <div class="container"> -->
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<a name="resume"></a>
@@ -76,8 +76,7 @@
 					</div>
 				</div>
 				<div class="row resume">
-					<div class="col-md-1"></div>
-					<div class="col-md-5 skills">
+					<div class="col-l-4 col-md-4 col-sm-6 skills">
 						<h3><i class="fa fa-cogs"></i>Skills</h3>
 						<ul>
 							<li>JavaScript (jQuery, AngularJS, React)</li>
@@ -107,153 +106,181 @@
 							<li>Marketing / Branding / Designing</li>
 							<li>Google Analytics</li>
 						</ul>
-						<div class="education">
-							<h3><i class="fa fa-graduation-cap"></i>Education</h3>
-							<h4>Galvanize | Full-Stack Development Immersive</h4>
-							<p class="title">February 2016 - July 2016</p>
-							<ul>
-								<li>Full-stack Development Fellow</li>
-							</ul>
-							<h4>TCC | Computer Science</h4>
-							<p class="title">Jan 2015 - December 2015</p>
-							<ul>
-								<li>Programming Certification in JavaScript basics, Microfost Office Suite and SQL / MySQL</li>
-							</ul>
-							<h4>Old Dominion University | Philosophy</h4>
-							<p class="title">August 2008 - December 2014</p>
-							<ul>
-								<li>Pi Beta Phi Fraternity</li>
-							</ul>
-						</div>
 					</div>
 
-					<div class="col-md-6 resume">
-						<div class="experience">
-							<h3><i class="fa fa-suitcase"></i>Experience</h3>
-							<h4>Software Developer / Product Owner</h4>
-							<p class="title">ReUP Distribution | September 2016 - January 2017
-							<ul>
-								<li>Consult on domain knowledge of ecommerce distribution channels to increase user acquisition metrics by over 300%</li>
-								<li>Perform formal user research and present findings to set feature development priorities</li>
-								<li>Adhere to TDD by cleaning up existing codebase and writing integration tests</li>
-							</ul>
-							<h4>Web Developer / Consultant / Freelance Contractor</h4>
-							<p class="title">Self Employed | May 2016 - Present
-							<ul>
-								<li>Network with small to medium sized companies to consult on business goals and current technologies</li>
-								<li>Strategize reasonable action plans to achieve results through user research, marketing, and branding practices</li>
-								<li>Utilize Full Stack skillset and previous industry knowledge to successfully turn client projects into shippable products</li>
-							</ul>
-							<h4>Full-Stack Development Resident</h4>
-							<p class="title">Galvanize | February 2016 - July 2016
-							<ul>
-								<li>Design, develop, and deploy mobile and web applications</li>
-								<li>Participate in Hackathons, technical projects, and coding challenges</li>
-								<li>Regularly learn new languages and technologies</li>
-							</ul>
-							<h4>Lead Product Coordinator</h4>
-							<p class="title">TJx Companies | July 2015 - December 2015
-							<ul>
-								<li>Managed team to process and merchandise 8+ trucks of product daily for most profitable TJMaxx / HomeGoods in the country</li>
-								<li>Decreased turnover rates by providing team members with an empathetic workplace</li>
-							</ul>
-							<h4>Product/Project Coordinator</h4>
-							<p class="title">Whole Foods Market | November 2012 - December 2015
-							<ul>
-								<li>Worked with Regional and Global teams to implement 4 full-department resets, improving customer-experience and increasing department sales</li>
-								<li>Analyzed metrics and consumer behavior, identifying areas with opportunity for growth</li>
-								<li>Guided teams to develop proactive strategies/procedures and execute new department practices to build add-on sales, increase basket-size, improve merchandising standards and minimize waste</li>
-							</ul>
-							<h4>Wine Buyer</h4>
-							<p class="title">Whole Foods Market | November 2012 - December 2015
-							<ul>
-								<li>Analyzed department metrics to notably increase profit margins by marketing, utilizing merchandising best-practices, and creating interactive programs for team memebers and customers</li>
-								<li>Coordinated weekly multi-department wine-tasting events to host upwards of 300+ participants</li>
-								<li>Expanded inventory by 50% in a 3 week period without disrupting open-to-buy or other metrics</li>
-								<li>Decreased department’s shrink metric by over 30% in a 2-week period by creating manageable traceability practices</li>
-								<li>Constructed marketing plan to increase event participation and engagement, tripling previous attendance records</li>
-								<li>Built relationships with new suppliers and brands to expand sub-departments and successfully increased consumer engagement</li>
-							</ul>
-						</div>
+					<div class="col-l-4 col-md-4 col-sm-6 experience">
+						<h3><i class="fa fa-suitcase"></i>Experience</h3>
+						<h4>Software Developer / Product Owner</h4>
+						<p class="title">ReUP Distribution | September 2016 - January 2017
+						<ul>
+							<li>Consult on domain knowledge of ecommerce distribution channels to increase user acquisition metrics by over 300%</li>
+							<li>Perform formal user research and present findings to set feature development priorities</li>
+							<li>Adhere to TDD by cleaning up existing codebase and writing integration tests</li>
+						</ul>
+						<h4>Web Developer / Consultant / Freelance Contractor</h4>
+						<p class="title">Self Employed | May 2016 - Present
+						<ul>
+							<li>Network with small to medium sized companies to consult on business goals and current technologies</li>
+							<li>Strategize reasonable action plans to achieve results through user research, marketing, and branding practices</li>
+							<li>Utilize Full Stack skillset and previous industry knowledge to successfully turn client projects into shippable products</li>
+						</ul>
+						<h4>Full-Stack Development Resident</h4>
+						<p class="title">Galvanize | February 2016 - July 2016
+						<ul>
+							<li>Design, develop, and deploy mobile and web applications</li>
+							<li>Participate in Hackathons, technical projects, and coding challenges</li>
+							<li>Regularly learn new languages and technologies</li>
+						</ul>
+						<h4>Lead Product Coordinator</h4>
+						<p class="title">TJx Companies | July 2015 - December 2015
+						<ul>
+							<li>Managed team to process and merchandise 8+ trucks of product daily for most profitable TJMaxx / HomeGoods in the country</li>
+							<li>Decreased turnover rates by providing team members with an empathetic workplace</li>
+						</ul>
+						<h4>Product/Project Coordinator</h4>
+						<p class="title">Whole Foods Market | November 2012 - December 2015
+						<ul>
+							<li>Worked with Regional and Global teams to implement 4 full-department resets, improving customer-experience and increasing department sales</li>
+							<li>Analyzed metrics and consumer behavior, identifying areas with opportunity for growth</li>
+							<li>Guided teams to develop proactive strategies/procedures and execute new department practices to build add-on sales, increase basket-size, improve merchandising standards and minimize waste</li>
+						</ul>
+						<h4>Wine Buyer</h4>
+						<p class="title">Whole Foods Market | November 2012 - December 2015
+						<ul>
+							<li>Analyzed department metrics to notably increase profit margins by marketing, utilizing merchandising best-practices, and creating interactive programs for team memebers and customers</li>
+							<li>Coordinated weekly multi-department wine-tasting events to host upwards of 300+ participants</li>
+							<li>Expanded inventory by 50% in a 3 week period without disrupting open-to-buy or other metrics</li>
+							<li>Decreased department’s shrink metric by over 30% in a 2-week period by creating manageable traceability practices</li>
+							<li>Constructed marketing plan to increase event participation and engagement, tripling previous attendance records</li>
+							<li>Built relationships with new suppliers and brands to expand sub-departments and successfully increased consumer engagement</li>
+						</ul>
 					</div>
+
+					<div class="col-l-4 col-md-4 col-sm-6 education">
+						<h3><i class="fa fa-graduation-cap"></i>Education</h3>
+						<h4>Galvanize | Full-Stack Development Immersive</h4>
+						<p class="title">February 2016 - July 2016</p>
+						<ul>
+							<li>Full-stack Development Fellow</li>
+						</ul>
+						<h4>TCC | Computer Science</h4>
+						<p class="title">Jan 2015 - December 2015</p>
+						<ul>
+							<li>Programming Certification in JavaScript basics, Microfost Office Suite and SQL / MySQL</li>
+						</ul>
+						<h4>Old Dominion University | Philosophy</h4>
+						<p class="title">August 2008 - December 2014</p>
+						<ul>
+							<li>Pi Beta Phi Fraternity</li>
+						</ul>
+					</div>
+
 				</div>
 			</div>
 		</div>
 
+
 		<!-- portfolio -->
-		<div class="light-section">
+		<div class="portfolio-section">
 			<div class="container text-center">
 				<a name="portfolio"></a>
 				<h2>PORTFOLIO</h2>
 				<div class="row">
-					<div class="col-lg-3 col-md-6 col-sm-6">
-						<a class="piece piece-odd" href="portfolio-4.html">
-							<div class="piece-hover">
-								<div class="piece-name">
-									<p class="piece-title">RideSurf</p>
-									<p class="piece-type">Design & Marketing</p>
+				  <div class="col-l-3 col-md-3 col-sm-6">
+				    <div class="thumbnail">
+							<a class="piece piece-odd" href="portfolio-4.html">
+								<div class="piece-hover">
+									<div class="piece-name">
+										<p class="piece-title">RideSurf</p>
+										<p class="piece-type">Design & Marketing</p>
+									</div>
 								</div>
-							</div>
-							<img src="images/4.png" alt="">
-						</a>
-					</div>
-
-					<div class="col-lg-3 col-md-6 col-sm-6">
-						<a class="piece piece-odd" href="portfolio-1.html">
-							<div class="piece-hover">
-								<div class="piece-name">
-									<p class="piece-title">The Bootcamp Resource Network</p>
-									<p class="piece-type">Design & Development</p>
+								<img src="images/4.png" alt="">
+							</a>
+							<h3>RideSurf</h3>
+				      <div class="caption">
+				        <p>RideSurf is a mobile / web app connecting people with active lifestyles to a secure car-sharing service on the basis of mutual activities.</p>
+				        <p><a href="portfolio-4.html" class="btn btn-default" role="button">Product Strategy</a></p>
+				      </div>
+				    </div>
+				  </div>
+					<div class="col-l-3 col-md-3 col-sm-6">
+				    <div class="thumbnail">
+							<a class="piece piece-odd" href="portfolio-1.html">
+								<div class="piece-hover">
+									<div class="piece-name">
+										<p class="piece-title">The Bootcamp Resource Network</p>
+										<p class="piece-type">Design & Development</p>
+									</div>
 								</div>
-							</div>
-							<img src="images/1.png" alt="">
-						</a>
-					</div>
-
-					<div class="col-lg-3 col-md-6 col-sm-6">
-						<a class="piece piece-odd" href="portfolio-3.html">
-							<div class="piece-hover">
-								<div class="piece-name">
-									<p class="piece-title">Confident Bagel</p>
-									<p class="piece-type">Design & Development</p>
+								<img src="images/1.png" alt="">
+							</a>
+							<h3>The B.R.N.</h3>
+				      <div class="caption">
+				        <p>The Bootcamp Resource Network is a platform for connecting Technical Bootcamp graduates to short-term contracts to build their professional portfolios.</p>
+				        <p><a href="portfolio-1.html" class="btn btn-default" role="button">Wireframing</a></p>
+				      </div>
+				    </div>
+				  </div>
+					<div class="col-l-3 col-md-3 col-sm-6">
+				    <div class="thumbnail">
+							<a class="piece piece-odd" href="portfolio-3.html">
+								<div class="piece-hover">
+									<div class="piece-name">
+										<p class="piece-title">Confident Bagel</p>
+										<p class="piece-type">Design & Development</p>
+									</div>
 								</div>
-							</div>
-							<img src="images/3.png" alt="">
-						</a>
+								<img src="images/3.png" alt="">
+							</a>
+							<h3>Confident Bagel</h3>
+				      <div class="caption">
+				        <p>Confident Bagel is a web application that runs a Sentiment Analysis on any given Twitter hashtag and displays visually appealing results.</p>
+				        <p><a href="portfolio-3.html" class="btn btn-default" role="button">Twittersphere</a></p>
+				      </div>
+				    </div>
+				  </div>
+					<div class="col-l-3 col-md-3 col-sm-6">
+				    <div class="thumbnail">
+							<a class="piece piece-odd" href="portfolio-2.html">
+								<div class="piece-hover">
+									<div class="piece-name">
+										<p class="piece-title">Troviamo</p>
+										<p class="piece-type">Design & Development</p>
+									</div>
+								</div>
+								<img src="images/2.png" alt="">
+							</a>
+							<h3>Troviamo</h3>
+				      <div class="caption">
+				        <p>Troviamo is a scavenger hunt application utilizing geolocation and a consumer's need for adventure.</br></p>
+				        <p><a href="portfolio-2.html" class="btn btn-default" role="button">Mobile App</a></p>
+				      </div>
+				    </div>
 					</div>
-
-					<div class="col-lg-3 col-md-6 col-sm-6">
-						<a class="piece piece-even" href="portfolio-2.html">
-			  			<div class="piece-hover">
-			  				<div class="piece-name">
-			  					<p class="piece-title">Troviamo</p>
-			  					<p class="piece-type">Design & Development</p>
-			  				</div>
-			  			</div>
-						<img src="images/2.png" alt="">
-						</a>
-					</div>
-
-
 				</div>
-
-				<!-- <div class="row">
-					<div class="col-md-8 col-md-offset-2">
-						<blockquote class="quote-one">
-						  <p class="lead"><span class="quotation">&ldquo;</span>I worked alongside Morgen at Galvanize, and from the beginning I was impressed with her tenacity and commitment to delivering user-driven products. She is not afraid to seek out diverse opinions and consistently challenges herself and others to raise the bar in delivering meaningful user experiences.<span class="quotation">&rdquo;</span></p>
-						  <footer>Amy Conchie, <cite title="Source Title">Software Engineer</cite></footer>
-						</blockquote>
-					</div>
-				</div> -->
 			</div>
 		</div>
+
+		<!-- quote carosel -->
+		<!--  maybe move this carosel to right below the header-->
+		<!-- <div class="quote-section">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<blockquote class="quote-one">
+						<p class="lead"><span class="quotation">&ldquo;</span>I worked alongside Morgen at Galvanize, and from the beginning I was impressed with her tenacity and commitment to delivering user-driven products. She is not afraid to seek out diverse opinions and consistently challenges herself and others to raise the bar in delivering meaningful user experiences.<span class="quotation">&rdquo;</span></p>
+						<footer>Amy Conchie, <cite title="Source Title">Software Engineer</cite></footer>
+					</blockquote>
+				</div>
+			</div>
+		</div> -->
 
 		<!-- contact -->
 		<div class="contact-section">
 			<div class="container text-center">
 				<div class="row">
-						<a name="contact"></a>
-						<h2>CONTACT</h2>
+					<a name="contact"></a>
+					<h2>CONTACT</h2>
 				</div>
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
@@ -286,8 +313,8 @@
 
 	<!-- footer -->
 		<div class="page-footer">
-			<div class="gl-container container text-center">
-						<p>Willing to work in:</br>Seattle | Bellevue | Redmond | San Fransicso | Long Beach | Remote</p>
+			<div class="container text-center">
+				<p>Willing to work in:</br>Seattle | Bellevue | Redmond | San Fransicso | Long Beach | Remote</p>
 			</div>
 		</div>
 	</body>
